added search indexes
