# .history/src/data/models/driver.model_20210623190754.ts
@@ -15,13 +15,10 @@ let driverSchema = new mongoose.Schema({
     address: { residential_address: String, postal_address: String, ghana_post: String },
     identification: { id_type: String, number: String },
     tin: { type: String },
-    terminal: { type: Schema.Types.ObjectId, ref: 'terminals'},
-    created_by: { type: Schema.Types.ObjectId, ref: 'users'},
+    terminal: { type: Schema.Types.ObjectId, ref: 'terminals' },
+    created_by: { type: Schema.Types.ObjectId, ref: 'users' },
 }, { timestamps: true })
-
-driverSchema.index({first_name: 'text', last_name: 'text', other_names: 'text', 'license.number': 'text'});
-
+driverSchema.index({ '$**': 'text' });
 const DriverModel = mongoose.model('drivers', driverSchema);
-DriverModel.createIndexes();
 
 export default DriverModel;
