# src/swagger.json
@@ -334,7 +334,6 @@
 				"required": [
 					"first_name",
 					"last_name",
-					"other_names",
 					"dob",
 					"license",
 					"contact",
@@ -426,7 +425,6 @@
 				"required": [
 					"first_name",
 					"last_name",
-					"other_names",
 					"dob",
 					"contact",
 					"address",
@@ -1208,14 +1206,6 @@
 				"parameters": [
 					{
 						"in": "query",
-						"name": "assembly",
-						"required": false,
-						"schema": {
-							"type": "string"
-						}
-					},
-					{
-						"in": "query",
 						"name": "limit",
 						"required": false,
 						"schema": {
@@ -1274,14 +1264,6 @@
 				],
 				"security": [],
 				"parameters": [
-					{
-						"in": "query",
-						"name": "assembly",
-						"required": false,
-						"schema": {
-							"type": "string"
-						}
-					},
 					{
 						"in": "query",
 						"name": "filter",
@@ -1706,6 +1688,74 @@
 						}
 					}
 				}
+			}
+		},
+		"/api/terminalMaster/update/{terminalId}": {
+			"put": {
+				"operationId": "Update",
+				"responses": {
+					"200": {
+						"description": "Updated"
+					},
+					"422": {
+						"description": "Validation Failed",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IErrorResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Terminal Master"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "terminalId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ITerminalMaster"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/terminalMaster/delete/{terminalMasterId}": {
+			"delete": {
+				"operationId": "Delete",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"tags": [
+					"Terminal Master"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "terminalMasterId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/api/terminal/all": {
